--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,13 @@
         "symfony/messenger": "^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0"
+        "infection/infection": "^0.19.0",
+        "phpstan/extension-installer": "^1.0",
+        "phpstan/phpstan": "^0.12.52",
+        "phpstan/phpstan-phpunit": "^0.12.16",
+        "phpstan/phpstan-strict-rules": "^0.12.5",
+        "phpunit/phpunit": "^8.0",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "config": {
         "bin-dir": "bin",
