--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "star/domain-event": "^2.1",
         "star/identity": "^1.2",
         "star/state-machine": "^2.0",
-        "symfony/event-dispatcher": "^5.0"
+        "symfony/event-dispatcher": "^5.0",
+        "twig/twig": "^3.1"
     },
     "require-dev": {
         "infection/infection": "^0.18",
